# ZiyanOS

./: CMakeLists.txt  README.md
Launcher/: CMakeLists.txt
Launcher/src/: main.cpp
MouseOverlay/: CMakeLists.txt
MouseOverlay/src/: main.cpp
src/core/: main.cpp
src/modules/download/: DownloadManager.cpp  DownloadManager.h
src/modules/filesystem/: filesystem.cpp  filesystem.h
src/modules/logging/: LogManager.cpp  LogManager.h
src/modules/mouseoverlay/: MouseOverlayManager.cpp  MouseOverlayManager.h
src/modules/settings/: SettingsManager.cpp  SettingsManager.h
src/modules/system/: SystemUtils.cpp  SystemUtils.h
src/modules/wallpaper/: WallpaperManager.cpp  WallpaperManager.h
src/resources/qml/: Desktop.qml  LockScreen.qml  WindowManager.qml
src/resources/qml/apps/browser/: BrowserWindow.qml  ErrorPage.qml  WelcomePage.qml
src/resources/qml/apps/calculator/: CalculatorButton.qml  CalculatorWindow.qml
src/resources/qml/apps/downloadmanager/: DownloadManagerWindow.qml
src/resources/qml/apps/easteregg/: EasterEggWindow.qml
src/resources/qml/apps/filebrowser/: FileBrowserWindow.qml
src/resources/qml/apps/imageviewer/: ImageViewer.qml
src/resources/qml/apps/musicplayer/: MusicPlayer.qml
src/resources/qml/apps/power/: PowerWindow.qml
src/resources/qml/apps/settings/: AboutPage.qml  ResolutionPage.qml  SettingsWindow.qml  WallpaperPage.qml  WindowSettingsPage.qml
src/resources/qml/apps/texteditor/: TextEditor.qml
src/resources/qml/apps/videoplayer/: VideoPlayer.qml
src/resources/qml/components/: DesktopIcon.qml  FilePicker.qml  ZiyanWindow.qml
